--- a/css/inquiry.css
+++ b/css/inquiry.css
@@ -2126,7 +2126,10 @@ nav {
         }
         
         .theme-toggle {
-            display: none; 
+            display: flex;
+            width: 36px;
+            height: 36px;
+            font-size: 1.1rem;
         }
         
         nav {
