--- a/css/services.css
+++ b/css/services.css
@@ -1542,7 +1542,10 @@
             }
             
             .theme-toggle {
-                display: none;
+                display: flex;
+                width: 36px;
+                height: 36px;
+                font-size: 1.1rem;
             }
             
             nav {
